Fix alignment of content header
text and house icon weren't lining up properly

--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -28,7 +28,10 @@
     
 }
 
-.content-header-breadcrumb-links{
+#content-header-breadcrumb-links{
+
+    display: flex;
+    align-content: flex-start;
    
 }
 
